<resources>
    <string name="app_name">CovidDefender</string>
    <string name="home">Home</string>
    <string name="statistics">Statistics</string>
    <string name="covid_info">Covid Info</string>
    <string name="covid19_info">COVID-19 Information</string>
    <string name="vaccination">Vaccination</string>
    <string name="covid_defender">Covid Defender</string>
    <string name="health_status">Health Status</string>
    <string name="health_risk_assessment">Health Risk Assessment</string>
    <string name="hotspot">Hotspot</string>
    <string name="check_in">Check - in</string>
    <string name="history">History</string>
    <string name="group">Group</string>
    <string name="vaccination_title">Vaccination</string>
    <string name="status">Status</string>
    <string name="appointment">Appointment</string>
    <string name="latest_announcement">Latest Announcement</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="back_button">back button</string>
    <string name="login">Login</string>
    <string name="register">Registration</string>
    <string name="c_19_statistics">COVID-19 Statistics</string>
    <string name="loginlink">
        <u>Already registered? Click here to sign in</u>
    </string>
    <string name="registerlink">
        <u>Haven\'t register? Click here to sign up</u>
    </string>
    <string name="resendOTP">
        <u>Didn\'t get the OTP? Resend</u>
    </string>
    <string name="forgetpass">
        <u>Forgot password? Click here</u>
    </string>
    <string name="profile">Profile</string>
    <string name="self_test">COVID-19 Self-Test</string>
    <string name="self_test_content_1">
        \u2022 These instructions for use relate to COVID-19 Self-Test (Rapid Antigen Test) only.
    </string>
    <string name="self_test_content_2">
        \u2022 This guide explains how to test yourself or another person for COVID-19, and report the results on CovidDefender.
    </string>
    <string name="self_test_content_3">
        \u2022 More information are available on:
        <u>https://covid-19.moh.gov.my/garis-panduan/gp-umum-covid19/kit-ujian-kendiri-covid19-self-test-kit</u>
    </string>
    <string name="i_agreed_to_terms_of_service_and_privacy_policy">
        I agreed to Terms of Service and Privacy Policy.
    </string>
    <string name="forgot_password">Forgot Password</string>
    <string name="fgtpwd_desc">
        Please enter the email associated with your account and we will send an email to reset your password.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lindung_semua">Lindung Semua</string>
    <string name="lindung_diri">Lindung Diri,</string>
    <string name="learn_how_vaccines_are_able_to_save_your_life">Learn how vaccines are able to save your life</string>
    <string name="things_you_need_to_know">Things you need to know</string>

    <!-- relation item-->
    <string-array name="relation_item">
        <item>Spouse</item>>
        <item>Child</item>
        <item>Parent/Parent-in-law</item>
        <item>Grandparents</item>
        <item>Siblings</item>
        <item>Guardian</item>>
        <item>Others</item>
    </string-array>
    <!-- state item -->
    <string-array name="state_items">
        <item>Johor</item>
        <item>Kedah</item>
        <item>Kelantan</item>
        <item>Malacca</item>
        <item>Negeri Sembilan</item>
        <item>Pahang</item>
        <item>Penang</item>
        <item>Perak</item>
        <item>Perlis</item>
        <item>Sabah</item>
        <item>Sarawak</item>
        <item>Selangor</item>
        <item>Terengganu</item>
        <item>WP Kuala Lumpur</item>
        <item>WP Labuan</item>
        <item>WP Putrajaya</item>
    </string-array>

    <!-- country code item -->
    <string-array name="country_code_item">
        <item>Malaysia(+60)</item>
        <item>Australia(+61)</item>
        <item>Bangladesh(+880)</item>
        <item>Chin(+86)</item>
        <item>Germany(+49)</item>
        <item>Indonesia(+62)</item>
        <item>Japan(+81)</item>
        <item>Taiwan(+886)</item>
        <item>Thailand(+66)</item>
        <item>United Kingdom(+44)</item>
        <item>United States(+1)</item>
    </string-array>

    <!-- nationality item -->
    <string-array name="nationality_item">
        <item>Malaysia</item>
        <item>Australia</item>
        <item>Bangladesh</item>
        <item>China</item>
        <item>Germany</item>
        <item>Indonesia</item>
        <item>Japan</item>
        <item>Taiwan</item>
        <item>Thailand</item>
        <item>United Kingdom</item>
        <item>United States</item>
    </string-array>

    <!-- test result item -->
    <string-array name="test_result_item">
        <item>Positive</item>
        <item>Negative</item>
        <item>Invalid</item>
    </string-array>

    <string-array name="document_items">
        <item>Take Photo</item>
        <item>Choose from Gallery</item>
    </string-array>




</resources>