<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".homefragmentsubpage.CheckIn">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:background="@drawable/rect_bottom_rounded_blue"
            android:elevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white"
            tools:ignore="RedundantDescriptionCheck"
            android:elevation="5dp"/>

        <TextView
            android:id="@+id/tv_check_in_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/gilroy_extrabold"
            android:text="@string/check_in"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="5dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_history"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/history"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:icon="@drawable/ic_history"
            app:iconSize="20dp"
            app:iconTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="5dp"/>

        <LinearLayout
            android:id="@+id/linear_profile_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_check_in_title"
            android:elevation="5dp">
            <RelativeLayout
                android:id="@+id/UserPicBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/profile_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:adjustViewBounds="true"
                    android:background="@color/white"
                    android:padding="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/sample_profile"
                    app:shapeAppearanceOverlay="@style/circular"></com.google.android.material.imageview.ShapeableImageView>
            </RelativeLayout>
            <TextView
                android:id="@+id/tv_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tifa Lockhart"
                android:textColor="@color/white"
                android:fontFamily="@font/gilroy_extrabold"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:id="@+id/tv_profile_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="110101050001"
                android:textSize="16sp"
                android:fontFamily="@font/gilroy_regular"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_covid_status"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:strokeColor="@color/black_70"
            app:strokeWidth="2dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/covid_status_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/card_icon_background_blue"
                    android:src="@drawable/virus_illustration_white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/covid_status_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/gilroy_bold"
                    android:text="Low Risk No Symptom"
                    android:textColor="@color/prussian_blue"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/covid_status_icon"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_vaccine_status"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_covid_status"
            app:strokeColor="@color/black_70"
            app:strokeWidth="2dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/vaccine_status_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/vaccination_badges"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/vaccine_status_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/gilroy_bold"
                    android:text="Fully Vaccinated"
                    android:textColor="@color/prussian_blue"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/vaccine_status_icon"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_vaccine_status">

            <TextView
                android:id="@+id/tv_lastcheckin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_regular"
                android:text="Last Check-in"
                android:textColor="@color/black_50"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_last_checkin_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_bold"
                android:text="Xiamen University Malaysia"
                android:textColor="@color/prussian_blue_dark"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_lastcheckin" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_check_out"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/gilroy_bold"
                android:text="check out"
                android:textAllCaps="false"
                android:textColor="@color/light_blue"
                android:textSize="15sp"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/light_blue"
                app:strokeWidth="2dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_check_in"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="@color/prussian_blue"
            android:fontFamily="@font/gilroy_bold"
            android:text="check in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>